option to continously update zts domain cache files (#2169)
* option to continously update zts domain cache files

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>

* include new DomainAttribute class

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>

---------

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>
Co-authored-by: Henry Avetisyan <hga@yahooinc.com>